include/plplot.h

typedef double   PLFLT;
typedef float    PLFLT;
typedef int32_t        PLINT;
typedef int            PLINT;
typedef PLINT    PLBOOL;
typedef void*    PLPointer;
typedef struct
{
    const char *opt;
    int ( *handler )( const char *, const char *, void * );
    void       *client_data;
    void       *var;
    long       mode;
    const char *syntax;
    const char *desc;
} PLOptionTable;
typedef struct
{
    int          type;              
    unsigned int state;             
    unsigned int keysym;            
    unsigned int button;            
    PLINT        subwindow;         
    char         string[PL_MAXKEY]; 
    int          pX, pY;            
    PLFLT        dX, dY;            
    PLFLT        wX, wY;            
} PLGraphicsIn;
#define    plinit                   c_plinit
#define    plshade                  c_plshade
PLDLLIMPEXP void
c_plcont( PLFLT **f, PLINT nx, PLINT ny, PLINT kx, PLINT lx,
          PLINT ky, PLINT ly, PLFLT *clevel, PLINT nlevel,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
plfcont( PLFLT ( *f2eval )( PLINT, PLINT, PLPointer ),
         PLPointer f2eval_data,
         PLINT nx, PLINT ny, PLINT kx, PLINT lx,
         PLINT ky, PLINT ly, PLFLT *clevel, PLINT nlevel,
         void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
         PLPointer pltr_data );
PLDLLIMPEXP void
c_plmap( void ( *mapform )( PLINT, PLFLT *, PLFLT * ), const char *type,
         PLFLT minlong, PLFLT maxlong, PLFLT minlat, PLFLT maxlat );
PLDLLIMPEXP void
c_plmeridians( void ( *mapform )( PLINT, PLFLT *, PLFLT * ),
               PLFLT dlong, PLFLT dlat,
               PLFLT minlong, PLFLT maxlong, PLFLT minlat, PLFLT maxlat );
PLDLLIMPEXP void
c_plshade( PLFLT **a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
           PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
           PLFLT shade_min, PLFLT shade_max,
           PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
           PLINT min_color, PLINT min_width,
           PLINT max_color, PLINT max_width,
           void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
           void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
           PLPointer pltr_data );
PLDLLIMPEXP void
c_plshade1( PLFLT *a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
            PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
            PLFLT shade_min, PLFLT shade_max,
            PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
            PLINT min_color, PLINT min_width,
            PLINT max_color, PLINT max_width,
            void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
            void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
            PLPointer pltr_data );
PLDLLIMPEXP void
c_plshades( PLFLT **a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
            PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax,
            PLFLT *clevel, PLINT nlevel, PLINT fill_width,
            PLINT cont_color, PLINT cont_width,
            void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
            void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
            PLPointer pltr_data );
PLDLLIMPEXP void
plfshade( PLFLT ( *f2eval )( PLINT, PLINT, PLPointer ),
          PLPointer f2eval_data,
          PLFLT ( *c2eval )( PLINT, PLINT, PLPointer ),
          PLPointer c2eval_data,
          PLINT nx, PLINT ny,
          PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
          PLFLT shade_min, PLFLT shade_max,
          PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
          PLINT min_color, PLINT min_width,
          PLINT max_color, PLINT max_width,
          void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
c_plslabelfunc( void ( *label_func )( PLINT, PLFLT, char *, PLINT, PLPointer ),
                PLPointer label_data );
PLDLLIMPEXP void
c_plsmaj( PLFLT def, PLFLT scale );
PLDLLIMPEXP void
c_plsmem( PLINT maxx, PLINT maxy, void *plotmem );
PLDLLIMPEXP void
c_plsmin( PLFLT def, PLFLT scale );
PLDLLIMPEXP void
c_plsori( PLINT ori );
PLDLLIMPEXP void
c_plspage( PLFLT xp, PLFLT yp, PLINT xleng, PLINT yleng,
           PLINT xoff, PLINT yoff );
PLDLLIMPEXP void
c_plspause( PLBOOL pause );
PLDLLIMPEXP void
c_plsstrm( PLINT strm );
PLDLLIMPEXP void
c_plssub( PLINT nx, PLINT ny );
PLDLLIMPEXP void
c_plssym( PLFLT def, PLFLT scale );
PLDLLIMPEXP void
c_plstar( PLINT nx, PLINT ny );
PLDLLIMPEXP void
c_plstart( const char *devname, PLINT nx, PLINT ny );
PLDLLIMPEXP void
c_plstripa( PLINT id, PLINT pen, PLFLT x, PLFLT y );
PLDLLIMPEXP void
c_plstripc( PLINT *id, const char *xspec, const char *yspec,
            PLFLT xmin, PLFLT xmax, PLFLT xjump, PLFLT ymin, PLFLT ymax,
            PLFLT xlpos, PLFLT ylpos,
            PLBOOL y_ascl, PLBOOL acc,
            PLINT colbox, PLINT collab,
            PLINT colline[], PLINT styline[], const char *legline[],
            const char *labx, const char *laby, const char *labtop );
PLDLLIMPEXP void
c_plstripd( PLINT id );
PLDLLIMPEXP void
c_plimagefr( PLFLT **idata, PLINT nx, PLINT ny,
             PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax, PLFLT zmin, PLFLT zmax,
             PLFLT valuemin, PLFLT valuemax,
             void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
             PLPointer pltr_data );
PLDLLIMPEXP void
c_plimage( PLFLT **idata, PLINT nx, PLINT ny,
           PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax, PLFLT zmin, PLFLT zmax,
           PLFLT Dxmin, PLFLT Dxmax, PLFLT Dymin, PLFLT Dymax );
PLDLLIMPEXP void
c_plstyl( PLINT nms, PLINT *mark, PLINT *space );
PLDLLIMPEXP void
c_plsurf3d( PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny,
            PLINT opt, PLFLT *clevel, PLINT nlevel );
PLDLLIMPEXP void
c_plsurf3dl( PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny,
             PLINT opt, PLFLT *clevel, PLINT nlevel,
             PLINT ixstart, PLINT ixn, PLINT *indexymin, PLINT*indexymax );
PLDLLIMPEXP void
c_plsvpa( PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax );
PLDLLIMPEXP void
c_plsxax( PLINT digmax, PLINT digits );
PLDLLIMPEXP void
plsxwin( PLINT window_id );
PLDLLIMPEXP void
c_plsyax( PLINT digmax, PLINT digits );
PLDLLIMPEXP void
c_plsym( PLINT n, PLFLT *x, PLFLT *y, PLINT code );
PLDLLIMPEXP void
c_plszax( PLINT digmax, PLINT digits );
PLDLLIMPEXP void
c_pltext( void );
PLDLLIMPEXP void
c_pltimefmt( const char *fmt );
PLDLLIMPEXP void
c_plvasp( PLFLT aspect );
PLDLLIMPEXP void
c_plvect( PLFLT **u, PLFLT **v, PLINT nx, PLINT ny, PLFLT scale,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
c_plvpas( PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax, PLFLT aspect );
PLDLLIMPEXP void
c_plvpor( PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax );
PLDLLIMPEXP void
c_plvsta( void );
PLDLLIMPEXP void
c_plw3d( PLFLT basex, PLFLT basey, PLFLT height, PLFLT xmin0,
         PLFLT xmax0, PLFLT ymin0, PLFLT ymax0, PLFLT zmin0,
         PLFLT zmax0, PLFLT alt, PLFLT az );
PLDLLIMPEXP void
c_plwid( PLINT width );
PLDLLIMPEXP void
c_plwind( PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax );
PLDLLIMPEXP void
c_plxormod( PLBOOL mode, PLBOOL *status );
PLDLLIMPEXP void
plgFileDevs( const char ***p_menustr, const char ***p_devname, int *p_ndev );
PLDLLIMPEXP void
plgDevs( const char ***p_menustr, const char ***p_devname, int *p_ndev );
PLDLLIMPEXP void
plsKeyEH( void ( *KeyEH )( PLGraphicsIn *, void *, int * ), void *KeyEH_data );
PLDLLIMPEXP void
plsButtonEH( void ( *ButtonEH )( PLGraphicsIn *, void *, int * ),
             void *ButtonEH_data );
PLDLLIMPEXP void
plsbopH( void ( *handler )( void *, int * ), void *handler_data );
PLDLLIMPEXP void
plseopH( void ( *handler )( void *, int * ), void *handler_data );
PLDLLIMPEXP void
plsError( PLINT *errcode, char *errmsg );
PLDLLIMPEXP void
plsexit( int ( *handler )( const char * ));
PLDLLIMPEXP void
plsabort( void ( *handler )( const char * ));
PLDLLIMPEXP void
pltr0( PLFLT x, PLFLT y, PLFLT *tx, PLFLT *ty, PLPointer pltr_data );
PLDLLIMPEXP void
pltr1( PLFLT x, PLFLT y, PLFLT *tx, PLFLT *ty, PLPointer pltr_data );
PLDLLIMPEXP void
pltr2( PLFLT x, PLFLT y, PLFLT *tx, PLFLT *ty, PLPointer pltr_data );
PLDLLIMPEXP void
pltr2p( PLFLT x, PLFLT y, PLFLT *tx, PLFLT *ty, PLPointer pltr_data );
PLDLLIMPEXP void
pltr0f( PLFLT x, PLFLT y, PLFLT *tx, PLFLT *ty, void *pltr_data );
PLDLLIMPEXP void
pltr2f( PLFLT x, PLFLT y, PLFLT *tx, PLFLT *ty, void *pltr_data );
PLDLLIMPEXP PLFLT
plf2eval2( PLINT ix, PLINT iy, PLPointer plf2eval_data );
PLDLLIMPEXP PLFLT
plf2eval( PLINT ix, PLINT iy, PLPointer plf2eval_data );
PLDLLIMPEXP PLFLT
plf2evalr( PLINT ix, PLINT iy, PLPointer plf2eval_data );
PLDLLIMPEXP void
plClearOpts( void );
PLDLLIMPEXP void
plResetOpts( void );
PLDLLIMPEXP int
plMergeOpts( PLOptionTable *options, const char *name, const char **notes );
PLDLLIMPEXP void
plSetUsage( const char *program_string, const char *usage_string );
PLDLLIMPEXP int
c_plsetopt( const char *opt, const char *optarg );
PLDLLIMPEXP int
plSetOpt( const char *opt, const char *optarg );
PLDLLIMPEXP int
c_plparseopts( int *p_argc, const char **argv, PLINT mode );
PLDLLIMPEXP void
plOptUsage( void );
PLDLLIMPEXP void
plgesc( char *p_esc );
PLDLLIMPEXP void
pl_cmd( PLINT op, void *ptr );
PLDLLIMPEXP int
plFindName( char *p );
PLDLLIMPEXP char *
plFindCommand( const char *fn );
PLDLLIMPEXP void
plGetName( const char *dir, const char *subdir, const char *filename, char **filespec );
PLDLLIMPEXP PLINT
plGetInt( const char *s );
PLDLLIMPEXP PLFLT
plGetFlt( const char *s );
PLDLLIMPEXP void
plAlloc2dGrid( PLFLT ***f, PLINT nx, PLINT ny );
PLDLLIMPEXP void
plFree2dGrid( PLFLT **f, PLINT nx, PLINT ny );
PLDLLIMPEXP void
plMinMax2dGrid( PLFLT **f, PLINT nx, PLINT ny, PLFLT *fmax, PLFLT *fmin );
PLDLLIMPEXP int
plGetCursor( PLGraphicsIn *gin );
PLDLLIMPEXP int
plTranslateCursor( PLGraphicsIn *gin );